# vtorprice_backend

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  clear_migrations.sh  docker-compose.yml  manage.py  pyproject.toml  redis.conf  start-web.sh
chat/: admin.py  apps.py  consumers.py  middleware.py  models.py  routing.py
chat/api/: serializers.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_alter_chat_options_alter_message_options_and_more.py  0003_chat_name.py  0004_alter_message_options.py
common/: admin.py  auth.py  filters.py  middleware.py  model_fields.py  models.py  pagination.py  serializers.py  swagger.py  utils.py  views.py
common/HTTPClient/: client.py  exceptions.py
company/: admin.py  apps.py  models.py  signals.py
company/api/: serializers.py  urls.py  views.py
company/migrations/: 0001_initial.py  0002_initial.py  0003_alter_companyrecyclables_unique_together_and_more.py  0004_alter_companyrecyclables_unique_together.py  0005_alter_companyverificationrequest_employee_and_more.py  0009_region_city_region.py  (+12 more)
config/: asgi.py  settings.py  urls.py  wsgi.py
document_generator/: apps.py  common.py  models.py
exchange/: admin.py  apps.py  models.py  services.py  signals.py  utils.py
finance/: admin.py  models.py  receivers.py
logistics/: admin.py  apps.py  models.py  signals.py
nginx/: nginx.Dockerfile
notification/: apps.py  models.py  receivers.py
product/: admin.py  models.py
services/: models.py  validators.py  yandex_geo.py
user/: admin.py  apps.py  models.py  utils.py
(+112 files in other folders)
